<resources>
    <string name="app_name">Hyvinvointilaskuri</string>
    <string name="add_user">+ Lisää käyttäjä</string>
    <string name="add_observation">+ Lisää havainto</string>
    <string name="text_BMI">Nykyinen BMI:</string>
    <string name="add_userName">Käyttäjänimi</string>
    <string name="add_userWeight">Paino (kg)</string>
    <string name="add_userHeight">Pituus (cm)</string>
    <string name="text_gender">Sukupuoli:</string>
    <string name="rb_genderMale">Mies</string>
    <string name="rb_genderFemale">Nainen</string>
    <string name="lisaapaino">Lisää paino</string>
    <string name="lisaapituus">Lisää pituus</string>
    <string name="lisaaruokailu">Lisää ruokailu</string>
    <string name="send">Lisää</string>
    <string name="add_meal_name">Ruoan nimi?</string>
    <string name="add_meal_calories">Ruoan kalorit?</string>
    <string name="button_newUser">Lisää</string>
    <string name="empty"> </string>
    <string name="buttonDeleteUser">- Poista käyttäjä</string>
    <string name="bmi_text">Nykyinen BMI:</string>
    <string name="bmi_info">Painoindeksisi on</string>
    <string name="bmi_0_15">Sairaalloinen alipaino! Ota yhteys lääkäriin!</string>
    <string name="bmi_15_17">Merkittävä alipaino!</string>
    <string name="bmi_17_185">Lievä alipaino!</string>
    <string name="bmi_185_25">Normaalipaino! Hienoa, jatka samaan malliin!</string>
    <string name="bmi_25_30">Lievä ylipaino!</string>
    <string name="bmi_30_35">Merkittävä ylipaino!</string>
    <string name="bmi_35_40">Vaikea ylipaino!</string>
    <string name="bmi_40_100">Sairaalloinen ylipaino! Ota yhteys lääkäriin!</string>
</resources>