<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddObservationActivity">

    <Button
        android:id="@+id/buttonAddWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="@+id/editTextAddWeight"
        app:layout_constraintStart_toStartOf="@+id/editTextAddWeight"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddWeight" />

    <EditText
        android:id="@+id/editTextAddWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:ems="10"
        android:hint="@string/add_meal_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/add_meal_calories"
        app:layout_constraintEnd_toEndOf="@+id/editTextAddWeight"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddWeight" />
</androidx.constraintlayout.widget.ConstraintLayout>